--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@
 # Visual Studio cache directory
 .vs/
 
+.idea
+
 # Gradle cache directory
 .gradle/
 
@@ -60,3 +62,6 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Common IntelliJ Platform excludes
+
